# ai-agent-strands-builder-aws

./: .gitignore  LICENSE  README.md  news_2026-01-14.csv  pyproject.toml
aigen/: dataframe_manipulation_out.md  dataframe_manipulation_out.py  dataframe_manipulation_out.py.output  galus_test_custom_tool.md  multi-agent-finance-orchestrator.output.txt.md
src/ai_agent_strands_builder_aws/: app.py
src/ai_agent_strands_builder_aws/core/: agent.py  tools.py
