[project]
name = "ai-agent-strands-builder-aws"
version = "0.1.0"
description = "Following https://builder.aws.com/content/2xzuBghpt5Qg3CJ23OB0LGyEzP4/building-intelligent-ai-agents-with-aws-strands-a-hands-on-guide"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
start = "ai_agent_strands_builder_aws.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
